package observer;

public interface Observador {
    void atualizar(Double preco);
    Double getPrecoAtual();
}